--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,6 @@ jobs:
       id: hello
       uses: actions/hello-world-docker-action@v2
       with:
-        who-to-greet: 'khai1198'
+        who-to-greet: 'khainq'
     - name: Get the output time
       run: echo "The time was ${{ steps.hello.outputs.time}}"
