--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: A job to say hello
     steps:
     - name: Hello world action step
